Atualização das imagens do prototipo

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
                 OII
             </div>
             <div id="embaixoCarrosel">
-                <div id="textoComeco">Nascido e criado na Vila da Folha, Naruto Uzumaki carregava dentro de si um poder temido por todos — a raposa de nove caudas, Kyūbi. Apesar da solidão e do julgamento, Naruto nunca desistiu de seu sonho de se tornar Hokage e ser reconhecido por todos. Sua jornada é uma história de crescimento, onde ele não só se torna mais forte fisicamente, mas também aprende a importância de laços e amizades, superando todos os desafios para proteger aqueles que ama. Seu lema é simples, mas poderoso: 'Eu nunca volto atrás com a minha palavra. Esse é o meu jeito ninja!'</div>
-                <div id="imagemComeco">IMAGEMMMMM</div>
+                <div id="textoComeco"></div>
+                <div id="imagemComeco"></div>
             </div>
         </div>
         <div id="segundaParte">Segunda Parte</div>
@@ -34,3 +34,5 @@
     </center>
 </body>
 </html>
+
+<!-- Nascido e criado na Vila da Folha, Naruto Uzumaki carregava dentro de si um poder temido por todos — a raposa de nove caudas, Kyūbi. Apesar da solidão e do julgamento, Naruto nunca desistiu de seu sonho de se tornar Hokage e ser reconhecido por todos. Sua jornada é uma história de crescimento, onde ele não só se torna mais forte fisicamente, mas também aprende a importância de laços e amizades, superando todos os desafios para proteger aqueles que ama. Seu lema é simples, mas poderoso: 'Eu nunca volto atrás com a minha palavra. Esse é o meu jeito ninja!' -->
