--- a/home.html
+++ b/home.html
@@ -8,25 +8,30 @@
 </head>
 <body>
     <center>
-        <header>
+        <!-- <header>
             <div class="menu">
                 <a href="">Home</a>
                 <a href="">Sobre Mim</a>
                 <a href="">Cadastro/Login</a>
             </div>
-        </header>
-        <div id="primeiraParte">
-            <div id="carrossel">
-                OII
-            </div>
-            <div id="embaixoCarrosel">
-                <div id="textoComeco"></div>
-                <div id="imagemComeco"></div>
+        </header> -->
+        <div id="primeiraParte"></div>
+
+        <div id="segundaParte">
+            <div id="textoSegundaParte">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus alias id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui dignissimos ullam non atque iste qui suscipit tenetur At quia dolores quo impedit laborum et aperiam animi. In accusantium tempora et sequi similique et nisi accusantium sit Quis minima qui commodi ullam et rerum porro. Ut quia quia aut recusandae earum et quis aspernatur? Sit omnis dolorem eum quaerat voluptas aut sint consectetur.</div>
+            <div id="imagensSegundaParte">
+                <div id="primeiraImagem"></div>
+                <div id="segundaImagem"></div>
             </div>
         </div>
-        <div id="segundaParte">Segunda Parte</div>
+
+
         <div id="terceiraParte">Terceira Parte</div>
         <div id="quartaParte">Quarta Parte</div>
+        <div id="quintaParte">Quinta Parte</div>
+        <div id="sextaParte">Sexta Parte</div>
+        <div id="setimaParte">Setima Parte</div>
+
 
         <footer class="footer">
 
