--- a/home.html
+++ b/home.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <center>
-        <!-- <header>
+        <header>
             <div class="menu">
                 <a href="">Home</a>
                 <a href="">Sobre Mim</a>
                 <a href="">Cadastro/Login</a>
             </div>
-        </header> -->
+        </header>
         <div id="primeiraParte"></div>
 
         <div id="segundaParte">
