Atualizaçao final do dia

--- a/home.html
+++ b/home.html
@@ -10,15 +10,17 @@
 
 <body>
     <center>
-        <header>
-            <div class="menu">
-                <a href="">Home</a>
-                <a href="">Sobre Mim</a>
-                <a href="">Cadastro/Login</a>
-            </div>
-        </header>
-        <div id="primeiraParte"></div>
-
+        
+        <div id="primeiraParte">
+            <header>
+                <div class="menu">
+                    <a href="">Home</a>
+                    <a href="">Sobre Mim</a>
+                    <a href="">Cadastro/Login</a>
+                </div>
+            </header>
+        </div>
+        
         <div id="segundaParte">
             <div id="textoSegundaParte">Nascido e criado na Vila da Folha, Naruto Uzumaki carregava dentro de si um
                 poder temido por todos — a raposa de nove caudas, Kyūbi. Apesar da solidão e do julgamento, Naruto nunca
