Parte do sobreMim

--- a/site/sobremim.html
+++ b/site/sobremim.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="sobreMim">
+        <div id="sobreTitulo">Como conheci o Anime</div>
+        <br><br>
+        <div id="sobreInformações">
+
+            <div class="sobre">
+                <div id="sobreTexto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quasi quisquam ad
+                    ullam illum! Enim id necessitatibus perferendis nemo, fugiat perspiciatis, adipisci possimus
+                    praesentium ex in laboriosam sed doloribus earum. Omnis ducimus placeat consequatur dolorem ea
+                    perspiciatis illum deserunt voluptatum amet. Enim nemo porro illum quibusdam error laudantium ipsa
+                    ex consequuntur quo quae ullam reprehenderit non officia nihil excepturi fuga consectetur ad nisi,
+                    iusto quisquam accusantium laboriosam in. Delectus, incidunt.</div>
+                <div id="sobreImagem"></div>
+            </div>
+            <br><br><br>
+            <div class="sobre">
+                <div id="sobreImagem"></div>
+                <div id="sobreTexto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quasi quisquam ad
+                    ullam illum! Enim id necessitatibus perferendis nemo, fugiat perspiciatis, adipisci possimus
+                    praesentium ex in laboriosam sed doloribus earum. Omnis ducimus placeat consequatur dolorem ea
+                    perspiciatis illum deserunt voluptatum amet. Enim nemo porro illum quibusdam error laudantium ipsa
+                    ex consequuntur quo quae ullam reprehenderit non officia nihil excepturi fuga consectetur ad nisi,
+                    iusto quisquam accusantium laboriosam in. Delectus, incidunt.</div>
+            </div>
+
+        </div>
+
+        <div id="sobrePreferido">oi</div>
+
+
+    </div>
 </body>
+
 </html>
