Parte do sobreMim

--- a/site/sobremim.html
+++ b/site/sobremim.html
@@ -35,8 +35,23 @@
             </div>
 
         </div>
+    </div>
+    <div id="sobrePreferido">
+        <div id="preferidoEsquerda">
+            <div class="TitulosSobre">Minha identificação</div>
+            <div id="textoEsquerda">Quas ab eius aliquid et eligendi molestiae. Qui dignissimos ullam non atque iste qui suscipit tenetur At quia dolores quo impedit laborum et aperiam animi. In accusantium tempora et sequi similique et nisi accusantium sit Quis minima qui commodi ullam et rerum porro. Ut quia quia aut recusandae earum et quis aspernatur? Enim id necessitatibus perferendis nemo, fugiat perspiciatis, adipisci Sit omnis dolorem eum quaerat voluptas aut sint consectetur sit Quis minima qui commodi ullam et rerum porro. Ut quia quia aut recusandae earum et quis aspernatur? Sit omnis dolorem eum quaerat voluptas aut sint consectetur.</div>
+        </div>
 
-        <div id="sobrePreferido">oi</div>
+
+        <div id="preferidoDireita">
+            <div class="TitulosSobre">Personagem Preferido</div>
+            <div id="caixaImagens"></div>
+        </div>
+
+
+
+
+
 
 
     </div>
