Atualização header e footer

--- a/site/personagens.html
+++ b/site/personagens.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>
+        <div class="div_header">
+            <a href="home.html">Home</a>
+        </div>
+        <div class="div_header">
+            <a href="sobremim.html">Sobre Mim</a>
+        </div>
+        <div class="div_header">
+            <a href="">Login/Cadastro</a>
+        </div>
+        
+    </header>
+
+
+    
     <!-- Parte do Naruto -->
-    <div class="sessaoPersonagem">
+    <div class="sessaoPersonagemNaruto">
         <div class="esquerdaPersonagem">
             <div class="textoPersonagem">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus alias
                 id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui dignissimos
@@ -25,7 +41,7 @@
     </div>
     <!-- Fim Naruto -->
     <!-- COMEÇO SAKURA -->
-    <div class="sessaoPersonagemInverso">
+    <div class="sessaoPersonagemSakura">
         <div class="esquerdaPersonagemInverso">
             <div class="textoPersonagemInverso">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus
                 alias
@@ -44,7 +60,7 @@
     </div>
     <!-- FIM SAKURA -->
     <!-- Começo SASUKE -->
-    <div class="sessaoPersonagem">
+    <div class="sessaoPersonagemSasuke">
         <div class="esquerdaPersonagem">
             <div class="textoPersonagem">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus alias
                 id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui dignissimos
@@ -97,5 +113,32 @@
         </div>
         <div class="direitaPersonagens"></div>
     </div>
+
+
+
+    <footer class="footer">
+        <div id="footerPaginas">
+            <a href="home.html">Home</a>
+            <a href="sobremim.html">Sobre Mim</a>
+            <a href="">Cadastro/Login</a>
+            <a href="historia.html">História</a>
+            <a href="personagens.html">Personagens</a>
+        </div>
+        <div id="footerMeio">
+            <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
+            <span id="endereco">
+                <span>Endereço</span>
+                <span>Rua Hadock Lobo, 595</span>
+                <span>São Paulo</span>
+            </span>
+            <span id="Desenvolvido">Desenvolvido por Macari Marcelino</span>
+        </div>
+        <div id="footerRedes">
+            <a href="">E-mail</a>
+            <a href="">Linked-in</a>
+            <a href="https://github.com/macari-11">GitHub</a>
+            <a href="https://www.instagram.com/macarimarcelino/">Instagram</a>
+        </div>
+    </footer>
 </body>
 </html>
