--- a/site/historia.html
+++ b/site/historia.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="div_header">
+            <a href="home.html">Home</a>
+        </div>
+        <div class="div_header">
+            <a href="sobremim.html">Sobre Mim</a>
+        </div>
+        <div class="div_header">
+            <a href="">Login/Cadastro</a>
+        </div>
+        
+    </header>
+
+
+
+    
     <div id="segundaParte">
         <div id="textoSegundaParte">Nascido e criado na Vila da Folha, Naruto Uzumaki carregava dentro de si um
             poder temido por todos — a raposa de nove caudas, Kyūbi. Apesar da solidão e do julgamento, Naruto nunca
@@ -19,5 +35,32 @@
             <div id="segundaImagem"></div>
         </div>
     </div>
+
+
+
+    <footer class="footer">
+        <div id="footerPaginas">
+            <a href="home.html">Home</a>
+            <a href="sobremim.html">Sobre Mim</a>
+            <a href="">Cadastro/Login</a>
+            <a href="historia.html">História</a>
+            <a href="personagens.html">Personagens</a>
+        </div>
+        <div id="footerMeio">
+            <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
+            <span id="endereco">
+                <span>Endereço</span>
+                <span>Rua Hadock Lobo, 595</span>
+                <span>São Paulo</span>
+            </span>
+            <span id="Desenvolvido">Desenvolvido por Macari Marcelino</span>
+        </div>
+        <div id="footerRedes">
+            <a href="">E-mail</a>
+            <a href="">Linked-in</a>
+            <a href="https://github.com/macari-11">GitHub</a>
+            <a href="https://www.instagram.com/macarimarcelino/">Instagram</a>
+        </div>
+    </footer>
 </body>
 </html>
