--- a/site/home.html
+++ b/site/home.html
@@ -7,17 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylehome2.css">
+    
 </head>
 
 <body>
     <center>
 
         <header>
-            <a href="home.html">Home</a>
-            <a href="sobremim.html">Sobre Mim</a>
-            <a href="">Login</a>
-            <a href="">Cadastro</a>
-            <input type="text" placeholder="Procure um personagem">
+            <div class="div_header">
+                <a href="home.html">Home</a>
+            </div>
+            <div class="div_header">
+                <a href="sobremim.html">Sobre Mim</a>
+            </div>
+            <div class="div_header">
+                <a href="">Login/Cadastro</a>
+            </div>
+            
         </header>
 
 
@@ -55,7 +61,28 @@
         </div>
 
         <footer class="footer">
-
+            <div id="footerPaginas">
+                <a href="home.html">Home</a>
+                <a href="sobremim.html">Sobre Mim</a>
+                <a href="">Cadastro/Login</a>
+                <a href="historia.html">História</a>
+                <a href="personagens.html">Personagens</a>
+            </div>
+            <div id="footerMeio">
+                <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
+                <span id="endereco">
+                    <span>Endereço</span>
+                    <span>Rua Hadock Lobo, 595</span>
+                    <span>São Paulo</span>
+                </span>
+                <span id="Desenvolvido">Desenvolvido por Macari Marcelino</span>
+            </div>
+            <div id="footerRedes">
+                <a href="">E-mail</a>
+                <a href="">Linked-in</a>
+                <a href="https://github.com/macari-11">GitHub</a>
+                <a href="https://www.instagram.com/macarimarcelino/">Instagram</a>
+            </div>
         </footer>
     </center>
 </body>
