Atualização das telas

--- a/site/sobremim.html
+++ b/site/sobremim.html
@@ -24,7 +24,7 @@
     </header>
 
 
-    
+
     <div class="sobreMim">
         <div id="sobreTitulo">Como conheci o Anime</div>
         <br><br>
@@ -50,7 +50,7 @@
                     iusto quisquam accusantium laboriosam in. Delectus, incidunt.</div>
             </div>
 
-        </div>
+        </div><br><br>
     </div>
     <div id="sobrePreferido">
         <div id="preferidoEsquerda">
@@ -61,15 +61,50 @@
 
         <div id="preferidoDireita">
             <div class="TitulosSobre">Personagem Preferido</div>
-            <div id="caixaImagens"></div>
+            <div id="caixaImagens">
+                <div class="minato">
+                    <span class="MinatoPortugues">Minato Namikaze</span>
+                    <div class="fotoMinato"></div>
+                    <span class="minatoJapones">波風ミナト</span>
+                </div>
+                <div class="minato">
+                    <span class="MinatoPortugues">Relâmpago Dourado de Konoha</span>
+                    <div class="fotoMinato"></div>
+                    <span class="minatoJapones">木ノ葉の黄色い閃光</span>
+                </div>
+                <div class="minato">
+                    <span class="MinatoPortugues">Salvador desse Mundo</span>
+                    <div class="fotoMinato"></div>
+                    <span class="minatoJapones">この世の救世主</span>
+                </div>
+            </div>
         </div>
+    </div>
+    
+
+    <div class="episodiosPreferidos">
+        <div id="tituloEP">Episódios Preferidos</div>
 
 
+        <div class="Episodios">
+            <div class="Episodio">
+                <span class="nomeEP">Lorem ipsum dolor</span>
+                <div class="fotoEP"></div>
+                <span class="descEP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, necessitatibus nostrum eligendi eveniet a odit voluptas minima maxime eius non nihil itaque corrupti cupiditate illum assumenda sed voluptate quam doloribus cum! Vero maiores odit quod?</span>
+            </div>
 
+            <div class="Episodio">
+                <span class="nomeEP">Lorem ipsum dolor</span>
+                <div class="fotoEP"></div>
+                <span class="descEP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, necessitatibus nostrum eligendi eveniet a odit voluptas minima maxime eius non nihil itaque corrupti cupiditate illum assumenda sed voluptate quam doloribus cum! Vero maiores odit quod?</span>
+            </div>
 
-
-
-
+            <div class="Episodio">
+                <span class="nomeEP">Lorem ipsum dolor</span>
+                <div class="fotoEP"></div>
+                <span class="descEP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, necessitatibus nostrum eligendi eveniet a odit voluptas minima maxime eius non nihil itaque corrupti cupiditate illum assumenda sed voluptate quam doloribus cum! Vero maiores odit quod?</span>
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
