Atualização das telas

--- a/site/login.html
+++ b/site/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login e Cadastro</title>
     <link rel="stylesheet" href="stylehome2.css">
+
       
 </head>
 
@@ -56,6 +57,10 @@
 
 
                <form action="#" class="cadastro">
+
+                  <div class="inputDados">
+                     <input type="text" placeholder="Nome completo" required>
+                  </div>
 
                   <div class="inputDados">
                      <input type="text" placeholder="Seu E-mail ninja" required>
