--- a/site/personagens.html
+++ b/site/personagens.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
@@ -16,7 +17,7 @@
             <a href="sobremim.html">Sobre Mim</a>
         </div>
         <div class="div_header">
-            <a href="">Login/Cadastro</a>
+            <a href="login.html">Login/Cadastro</a>
         </div>
         
     </header>
@@ -120,7 +121,7 @@
         <div id="footerPaginas">
             <a href="home.html">Home</a>
             <a href="sobremim.html">Sobre Mim</a>
-            <a href="">Cadastro/Login</a>
+            <a href="login.html">Cadastro/Login</a>
             <a href="historia.html">História</a>
             <a href="personagens.html">Personagens</a>
         </div>
