--- a/site/home.html
+++ b/site/home.html
@@ -21,7 +21,7 @@
                 <a href="sobremim.html">Sobre Mim</a>
             </div>
             <div class="div_header">
-                <a href="">Login/Cadastro</a>
+                <a href="login.html">Login/Cadastro</a>
             </div>
             
         </header>
@@ -64,7 +64,7 @@
             <div id="footerPaginas">
                 <a href="home.html">Home</a>
                 <a href="sobremim.html">Sobre Mim</a>
-                <a href="">Cadastro/Login</a>
+                <a href="login.html">Cadastro/Login</a>
                 <a href="historia.html">História</a>
                 <a href="personagens.html">Personagens</a>
             </div>
