--- a/site/onu.html
+++ b/site/onu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylehome2.css">
 </head>
 <body>
 
@@ -67,7 +68,7 @@
         <div id="footerPaginas">
             <a href="home.html">Home</a>
             <a href="sobremim.html">Sobre Mim</a>
-            <a href="">Cadastro/Login</a>
+            <a href="login.html">Cadastro/Login</a>
             <a href="historia.html">História</a>
             <a href="personagens.html">Personagens</a>
         </div>
