--- a/site/personagens.html
+++ b/site/personagens.html
@@ -78,7 +78,7 @@
     </div>
     <!-- FIM SASUKE -->
     <!-- COMEÇO KAKSHI -->
-    <div class="sessaoPersonagemInverso">
+    <div class="sessaoPersonagemKakashi">
         <div class="esquerdaPersonagemInverso">
             <div class="textoPersonagemInverso">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui
                 temporibus alias
