--- a/site/sobremim.html
+++ b/site/sobremim.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="stylehome2.css">
 </head>
 
 <body>
@@ -65,17 +64,17 @@
             <div id="caixaImagens">
                 <div class="minato">
                     <span class="MinatoPortugues">Minato Namikaze</span>
-                    <div class="fotoMinato"></div>
+                    <div class="fotoMinato1"></div>
                     <span class="minatoJapones">波風ミナト</span>
                 </div>
                 <div class="minato">
                     <span class="MinatoPortugues">Relâmpago Dourado de Konoha</span>
-                    <div class="fotoMinato"></div>
+                    <div class="fotoMinato2"></div>
                     <span class="minatoJapones">木ノ葉の黄色い閃光</span>
                 </div>
                 <div class="minato">
                     <span class="MinatoPortugues">Salvador desse Mundo</span>
-                    <div class="fotoMinato"></div>
+                    <div class="fotoMinato3"></div>
                     <span class="minatoJapones">この世の救世主</span>
                 </div>
             </div>
