--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="stylehome2.css">
+    <link rel="stylesheet" href="../css/stylehome2.css">
+    <link rel="stylesheet" href="../css/style.css">
     
 </head>
 
@@ -19,7 +19,7 @@
                 <a href="sobremim.html">Sobre Mim</a>
             </div>
             <div class="div_header">
-                <a href="login.html">Login/Cadastro</a>
+                <a href="../site/login.html">Login/Cadastro</a>
             </div>
             
         </header>
