--- a/site/public/site/login.html
+++ b/site/public/site/login.html
@@ -114,7 +114,7 @@
 
 
          function entrar() {
-       aguardar();
+      //  aguardar();
 
       var emailVar = email_input_login.value;
       var senhaVar = senha_input_login.value;
@@ -155,7 +155,7 @@
             sessionStorage.NOME_USUARIO = json.nome;
 
             setTimeout(function () {
-              window.location = "./home.html";
+              window.location = "../site/index.html";
             }, 2000);
 
           });
