Cadastro e Login conectado no Banco

--- a/site/public/site/homeSemLogin.html
+++ b/site/public/site/homeSemLogin.html
@@ -12,7 +12,7 @@
 
         <header>
             <div class="div_header">
-                <a href="home.html">Home</a>
+                <a href="homeSemLogin.html">Home</a>
             </div>
             <div class="div_header">    
                 <a href="sobremim.html">Sobre Mim</a>
