--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="div_header">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
         <div class="div_header">
             <a href="sobremim.html">Sobre Mim</a>
