--- a/site/public/site/sobremim.html
+++ b/site/public/site/sobremim.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="div_header">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
         <div class="div_header">
             <a href="sobremim.html">Sobre Mim</a>
