--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -13,7 +13,7 @@
 <body>
         <header>
             <div class="div_header">
-                <a href="index.html">Home</a>
+                <a href="../dashboard/dash.html">Home</a>
             </div>
             <div class="div_header">    
                 <a href="sobremim.html">Sobre Mim</a>
