--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -11,15 +11,14 @@
 <body>
     <header>
         <div class="div_header">
-            <a href="index.html">Home</a>
+            <a href="../site/index.html">Home</a>
+        </div>
+        <div class="div_header">    
+            <a href="../site/sobremim.html">Sobre Mim</a>
         </div>
         <div class="div_header">
-            <a href="sobremim.html">Sobre Mim</a>
+            <a href="../site/login.html">Login/Cadastro</a>
         </div>
-        <div class="div_header">
-            <a href="">Login/Cadastro</a>
-        </div>
-        
     </header>
 
 
