--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -16,7 +16,7 @@
                 <a href="../dashboard/dash.html">Home</a>
             </div>
             <div class="div_header">    
-                <a href="sobremim.html">Sobre Mim</a>
+                <a href="../site/sobremim.html">Sobre Mim</a>
             </div>
             <div class="div_header">
                 <a href="../site/login.html">Login/Cadastro</a>
@@ -51,9 +51,10 @@
 
             <div id="direita">
                 <div id="baixo">
-                    <a href="historia.html">Historia</a>
-                    <a href="personagens.html">Personagens</a>
-                    <a href="onu.html">ONU</a>
+                    <a href="../site/historia.html">Historia</a>
+                    <a href="../site/personagens.html">Personagens</a>
+                    <a href="../site/onu.html">ONU</a>
+                    <a href="../site/quiz/quiz.html">Teste seu conhecimento</a>
 
                 </div>
             </div>
@@ -62,10 +63,10 @@
         <footer class="footer">
             <div id="footerPaginas">
                 <a href="home.html">Home</a>
-                <a href="sobremim.html">Sobre Mim</a>
-                <a href="login.html">Cadastro/Login</a>
-                <a href="historia.html">História</a>
-                <a href="personagens.html">Personagens</a>
+                <a href="../site/sobremim.html">Sobre Mim</a>
+                <a href="../site/login.html">Cadastro/Login</a>
+                <a href="../site/historia.html">História</a>
+                <a href="../site/personagens.html">Personagens</a>
             </div>
             <div id="footerMeio">
                 <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
