--- a/site/public/site/sobremim.html
+++ b/site/public/site/sobremim.html
@@ -13,15 +13,14 @@
 
     <header>
         <div class="div_header">
-            <a href="index.html">Home</a>
+            <a href="../site/index.html">Home</a>
         </div>
-        <div class="div_header">
-            <a href="sobremim.html">Sobre Mim</a>
+        <div class="div_header">    
+            <a href="../site/sobremim.html">Sobre Mim</a>
         </div>
         <div class="div_header">
             <a href="../site/login.html">Login/Cadastro</a>
         </div>
-        
     </header>
 
 
