--- a/site/public/site/personagens.html
+++ b/site/public/site/personagens.html
@@ -12,15 +12,14 @@
 
     <header>
         <div class="div_header">
-            <a href="index.html">Home</a>
+            <a href="../site/index.html">Home</a>
+        </div>
+        <div class="div_header">    
+            <a href="../site/sobremim.html">Sobre Mim</a>
         </div>
         <div class="div_header">
-            <a href="sobremim.html">Sobre Mim</a>
+            <a href="../site/login.html">Login/Cadastro</a>
         </div>
-        <div class="div_header">
-            <a href="login.html">Login/Cadastro</a>
-        </div>
-        
     </header>
 
 
