Atualização das telas de Personagens

--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -24,78 +24,27 @@
 
 
     <div class="TelaGeralHistoria">
-    <div id="segundaParte">
-        <div id="tituloSobreOanime">
-            <span>SOBRE O ANIME</span>
-        </div>
-        <div id="textoSegundaParte">Nascido e criado na Vila da Folha, Naruto Uzumaki carregava dentro de si um
-            poder temido por todos — a raposa de nove caudas, Kyūbi. Apesar da solidão e do julgamento, Naruto nunca
-            desistiu de seu sonho de se tornar Hokage e ser reconhecido por todos. Sua jornada é uma história de
-            crescimento, onde ele não só se torna mais forte fisicamente, mas também aprende a importância de laços
-            e amizades, superando todos os desafios para proteger aqueles que ama. Seu lema é simples, mas poderoso:
-            'Eu nunca volto atrás com a minha palavra. Esse é o meu jeito ninja!</div>
+
+                    <div class="telaClassico">
+                        <div class="telaClassicoEsquerda">
+                            <div class="logoClassico"></div>
+                            <div class="fotoNarutoClassico"></div>
+                        </div>
+                        <div class="telaClassicoDireita"></div>
+                    </div>
+
+
+                    <div class="telaShippuden">
+                        <div class="telaShippudenEsquerda">
+                            <div class="logoShippuden"></div>
+                            <div class="fotoNarutoShippuden"></div>
+                        </div>
+                        <div class="telaShippudenDireita">
+                        </div>
+                    </div>
+
     </div>
 
-
-    <div class="partesHistoria">
-        <div class="partesHistoriaEsquerda">
-            <div id="TituloHistoriaEsquerda">
-                Classico
-            </div>
-            <div class="ImagemHistoriaEsquerda">
-                <div id="ImagemHistoriaEsquerda"></div>
-            </div>
-        </div>
-        <div class="partesHistoriaDireita"><span>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos pariatur corporis aspernatur commodi quod tenetur consequuntur cumque tempore molestiae. Maiores pariatur modi nesciunt ipsa id libero officia optio enim dolorum dicta velit similique incidunt vero amet earum, laboriosam quis est possimus quaerat tenetur obcaecati quam? Quisquam saepe labore veritatis doloribus, voluptate dolore consectetur eveniet vel omnis sapiente temporibus totam cumque? Quae hic maiores sit veritatis aut officia repellat incidunt obcaecati omnis molestias dolorem iure provident, ullam placeat quaerat nam quisquam.
-        </span>
-        </div>
-    </div>
-
-
-    <div class="partesHistoria2">
-        <div class="partesHistoriaEsquerda">
-            <div id="TituloHistoriaEsquerda">
-                Shippuden
-            </div>
-            <div class="ImagemHistoriaEsquerda">
-                <div id="ImagemHistoriaEsquerda"></div>
-            </div>
-        </div>
-        <div class="partesHistoriaDireita"><span>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos pariatur corporis aspernatur commodi quod tenetur consequuntur cumque tempore molestiae. Maiores pariatur modi nesciunt ipsa id libero officia optio enim dolorum dicta velit similique incidunt vero amet earum, laboriosam quis est possimus quaerat tenetur obcaecati quam? Quisquam saepe labore veritatis doloribus, voluptate dolore consectetur eveniet vel omnis sapiente temporibus totam cumque? Quae hic maiores sit veritatis aut officia repellat incidunt obcaecati omnis molestias dolorem iure provident, ullam placeat quaerat nam quisquam.
-        </span>
-        </div>
-    </div>
-
-
-    <div class="parteAntagonistas">
-        <span>ANTAGONISTAS</span>
-        <div class="Antagonistas">
-
-            <div id="antagonistaClassico">
-                <div class="tituloAntagonista">CLASSICO</div>
-                <div class="fotosAntagonistas">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                </div>
-            </div>
-
-            <div id="antagonistaShippuden">
-                <div class="tituloAntagonista">SHIPPUDEN</div>
-                <div class="fotosAntagonistas">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                    <img src="imagensNaruto/minato3.jpg" alt="">
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
 
 
     <footer class="footer">
