melhorias nas telas do time7 e sobremim

--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -52,7 +52,7 @@
             <div id="direita">
                 <div id="baixo">
                     <a href="../site/historia.html">Historia</a>
-                    <a href="../site/personagens.html">Personagens</a>
+                    <a href="../site/time7.html">Time 7</a>
                     <a href="../site/onu.html">ONU</a>
                     <a href="../site/quiz/quiz.html">Teste seu conhecimento</a>
 
