--- a/site/public/site/onu.html
+++ b/site/public/site/onu.html
@@ -26,7 +26,8 @@
 
 
     <div id="telaOnu">
-        <div id="textoOnu">Tópicos Abordados</div>
+        <div id="textoOnu">Tópicos Abordados pela ONU</div>
+        <br><br>    
         <div id="topicos">
             <div class="TOPICOS">
                 <div class="topico">
