--- a/site/public/dashboard/dash.html
+++ b/site/public/dashboard/dash.html
@@ -31,19 +31,32 @@
 
     <div class="telaDash">
 
-        <div class="EspacoGraficos">
+        
 
-                    <div class="graficoTop7Quiz">
-                        <span>Top 7 pontuadores teste de conhecimento</span>
-                        <canvas id="quizBarraAcertos"></canvas>
-                    </div>
+                <div class="graficosQuiz">
 
+                        <div class="graficos">
+                            <span>QUIZ FACIL</span>
+                            <canvas id="quizBarraFACIL"></canvas>
+                        </div>
 
-                    <div class="graficoPersonagens">
-                        <span>Top 7 personagens dos usuarios</span>
-                        <canvas id="quizBarraPersonagens"></canvas>
-                    </div>
+                        <div class="graficos">
+                            <span>QUIZ MEDIO</span>
+                            <canvas id="quizBarraMEDIO"></canvas>
+                        </div>
 
+                        <div class="graficos">
+                            <span>QUIZ HARD</span>
+                            <canvas id="quizBarraHARD"></canvas>
+                        </div>
+
+                </div>
+
+        
+
+        <div class="graficoPersonagens">
+            <span>Preferidos da galera</span>
+            <canvas id="quizBarraPersonagens"></canvas>
         </div>
 
     </div>
