--- a/site/public/dashboard/dash.html
+++ b/site/public/dashboard/dash.html
@@ -36,17 +36,17 @@
                 <div class="graficosQuiz">
 
                         <div class="graficos">
-                            <span>QUIZ FACIL</span>
+                            <span>FACIL</span>
                             <canvas id="quizBarraFACIL"></canvas>
                         </div>
 
                         <div class="graficos">
-                            <span>QUIZ MEDIO</span>
+                            <span>MEDIO</span>
                             <canvas id="quizBarraMEDIO"></canvas>
                         </div>
 
                         <div class="graficos">
-                            <span>QUIZ HARD</span>
+                            <span>HARD</span>
                             <canvas id="quizBarraHARD"></canvas>
                         </div>
 
