--- a/site/public/site/login.html
+++ b/site/public/site/login.html
@@ -174,6 +174,7 @@
             console.log(JSON.stringify(json));
             sessionStorage.EMAIL_USUARIO = json.email;
             sessionStorage.NOME_USUARIO = json.nome;
+            sessionStorage.ID_USUARIO = json.id;
             
 
             setTimeout(function () {
