--- a/site/public/dashboard/dash.html
+++ b/site/public/dashboard/dash.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.1.0"></script>
     <script src="./dash.js"></script>
-    <script src="../site/header.js"></script>
+    <script src="../site/js/header.js"></script>
     
 </head>
 
