--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../site/header.js"></script>
+    <script src="../site/js/header.js"></script>
 </head>
 <body>
     <header>
