--- a/site/public/site/time7.html
+++ b/site/public/site/time7.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../site/header.js"></script>
+    <script src="../site/js/header.js"></script>
     
     
 </head>
