Botão voltar Quiz

--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -28,9 +28,9 @@
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
                 <a href="../site/onu.html">Onu</a>
-                <a href="./quiz/quiz.html">Quiz</a>
-                <a href="./quiz/quizMedio.html">Quiz Médio</a>
-                <a href="./quiz/quiz.html">Quiz Dificil</a>
+                <a href="../site/quiz/quiz.html">Quiz</a>
+                <a href="../site/quiz/quizMedio.html">Quiz Médio</a>
+                <a href="../site/quiz/quizHard.html">Quiz Dificil</a>
                 <a href="../dashboard/dash.html">Metricas Usuarios</a>
             </div>
         </div>
