--- a/site/public/site/quiz/quiz.html
+++ b/site/public/site/quiz/quiz.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz NARUTINHO</title>
     <link rel="stylesheet" href="quiz.css">
-    <script src="quiz.js" async></script>
+    <script src="quiz.js"></script>
 
-    <!-- ASYNC faz o JS rodar apenas apos o html ser criado -->
 </head>
+
 <body>
+    <div class="divVoltar">
+        <button onclick="Voltar()">VOLTAR</button>
+    </div>
 
     <div class="container">
         <div class="questoes-box esconder">
@@ -26,7 +30,8 @@
             <button class="proximaQuestao button esconder">Próxima pergunta</button>
         </div>
     </div>
-    
-    
+
+
 </body>
+
 </html>
