Botão para sair da sessão

--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -16,14 +16,13 @@
         <div class="div_header">
             <a href="../site/index.html">Home</a>
         </div>
-       
-        <div class="div_header">
-            <a href="../site/login.html">Login/Cadastro</a>
+        <div>
+            Usuario
         </div>
-        
         <div class="menu-container">
             <button class="menu-btn" onclick="AbrirOpcoes()">☰</button>
             <div class="menu-options" id="menu">
+                <a href="../site/login.html">Login</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
@@ -32,6 +31,7 @@
                 <a href="../site/quiz/quizMedio.html">Quiz Médio</a>
                 <a href="../site/quiz/quizHard.html">Quiz Dificil</a>
                 <a href="../dashboard/dash.html">Metricas Usuarios</a>
+                <a href="#" onclick="SairDaSecao()">Sair</a>
             </div>
         </div>
 
@@ -93,4 +93,3 @@
 
 </html>
 
-<!-- Nascido e criado na Vila da Folha, Naruto Uzumaki carregava dentro de si um poder temido por todos — a raposa de nove caudas, Kyūbi. Apesar da solidão e do julgamento, Naruto nunca desistiu de seu sonho de se tornar Hokage e ser reconhecido por todos. Sua jornada é uma história de crescimento, onde ele não só se torna mais forte fisicamente, mas também aprende a importância de laços e amizades, superando todos os desafios para proteger aqueles que ama. Seu lema é simples, mas poderoso: 'Eu nunca volto atrás com a minha palavra. Esse é o meu jeito ninja!' -->
