--- a/site/public/site/login.html
+++ b/site/public/site/login.html
@@ -179,6 +179,7 @@
 
             setTimeout(function () {
               window.location = "../site/index.html";
+              console.log("chegamos aqui")
             }, 1000);
 
           });
@@ -286,25 +287,6 @@
       return false;
     }
 
-    // Listando empresas cadastradas 
-    function listar() {
-      fetch("/empresas/listar", {
-        method: "GET",
-      })
-        .then(function (resposta) {
-          resposta.json().then((empresas) => {
-            empresas.forEach((empresa) => {
-              listaEmpresasCadastradas.push(empresa);
-
-              console.log("listaEmpresasCadastradas")
-              console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-            });
-          });
-        })
-        .catch(function (resposta) {
-          console.log(`#ERRO: ${resposta}`);
-        });
-    }
 
     function sumirMensagem() {
       cardErro.style.display = "none";
